--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -18,50 +18,106 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li>Services</li>
-        <li>Product</li>
-        <li>Vision</li>
-        <li>Features</li>
-        <li>About</li>
-        <li>Contact</li>
-        <li>
-          <img
-            class="logo"
-            src="img/logo.png"
-            alt="Great Idea! Company logo."
-          />
-        </li>
-      </ul>
-    </nav>
+    <div class="container">
+      <nav>
+        <ul>
+          <li>Services</li>
+          <li>Product</li>
+          <li>Vision</li>
+          <li>Features</li>
+          <li>About</li>
+          <li>Contact</li>
+          <li>
+            <img
+              class="logo"
+              src="img/logo.png"
+              alt="Great Idea! Company logo."
+            />
+          </li>
+        </ul>
+      </nav>
 
-    Innovation On Demand Get Started
+      <div class="hero">
+        <ul>
+          <li class="tagline">
+            <h1>Innovation On Demand</h1>
+            <button>Get Started</button>
+          </li>
+          <li class="code-snippet">
+            <img src="img/header-img.png" alt="Image of a code snippet." />
+          </li>
+        </ul>
+      </div>
 
-    <img src="img/header-img.png" alt="Image of a code snippet." />
+      <div class="features-about">
+        <ul>
+          <li class="features">
+            <h5>Features</h5>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </li>
+          <li class="about">
+            <h5>About</h5>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </li>
+        </ul>
+      </div>
 
-    Features Aliquam elementum magna eros, ac posuere elvit tempus et.
-    Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl.
-    Nullam convallis augue justo, at imperdiet metus scelerisque quis. About
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel
-    tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis
-    augue justo, at imperdiet metus scelerisque quis.
+      <div class="middle-image">
+        <img
+          class="middle-img"
+          src="img/mid-page-accent.jpg"
+          alt="Image of code snippets across the screen"
+        />
+      </div>
+      <div>
+        <ul class="panels">
+          <li class="services">
+            <h5>Services</h5>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </li>
+          <li class="product">
+            <h5>Product</h5>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </li>
+          <li class="vision">
+            <h5>Vision</h5>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </li>
+        </ul>
+      </div>
 
-    <img
-      class="middle-img"
-      src="img/mid-page-accent.jpg"
-      alt="Image of code snippets across the screen"
-    />
-
-    Services Aliquam elementum magna eros, ac posuere elvit tempus et.
-    Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl.
-    Nullam convallis augue justo, at imperdiet metus scelerisque quis. Product
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel
-    tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis
-    augue justo, at imperdiet metus scelerisque quis. Vision Aliquam elementum
-    magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-    interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at
-    imperdiet metus scelerisque quis. Contact 123 Way 456 Street Somewhere, USA
-    1 (888) 888-8888 sales@greatidea.io Copyright Great Idea! 2018
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>
+          123 Way 456 Street Somewhere, USA 1 (888) 888-8888 sales@greatidea.io
+          Copyright Great Idea! 2018
+        </address>
+      </div>
+    </div>
   </body>
 </html>
