resize p's and get started on hero styling

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="container">
-      <nav>
+      <nav class="nav">
         <ul>
           <li>Services</li>
           <li>Product</li>
@@ -37,8 +37,8 @@
         </ul>
       </nav>
 
-      <div class="hero">
-        <ul>
+      <div>
+        <ul class="hero">
           <li class="tagline">
             <h1>Innovation On Demand</h1>
             <button>Get Started</button>
@@ -49,9 +49,9 @@
         </ul>
       </div>
 
-      <div class="features-about">
-        <ul>
-          <li class="features">
+      <div>
+        <ul class="features">
+          <li>
             <h5>Features</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -60,7 +60,7 @@
               scelerisque quis.
             </p>
           </li>
-          <li class="about">
+          <li>
             <h5>About</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -70,6 +70,7 @@
             </p>
           </li>
         </ul>
+        ds
       </div>
 
       <div class="middle-image">
@@ -80,7 +81,7 @@
         />
       </div>
       <div>
-        <ul class="panels">
+        <ul class="services">
           <li class="services">
             <h5>Services</h5>
             <p>
