reasonable layout progress

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -37,8 +37,8 @@
         </ul>
       </nav>
 
-      <div>
-        <ul class="hero">
+      <div class="hero">
+        <ul>
           <li class="tagline">
             <h1>Innovation On Demand</h1>
             <button>Get Started</button>
@@ -70,10 +70,9 @@
             </p>
           </li>
         </ul>
-        ds
       </div>
 
-      <div class="middle-image">
+      <div>
         <img
           class="middle-img"
           src="img/mid-page-accent.jpg"
