--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -48,7 +48,7 @@
           </li>
         </ul>
       </div>
-
+      <hr />
       <div>
         <ul class="features">
           <li>
@@ -110,14 +110,17 @@
           </li>
         </ul>
       </div>
-
+      <hr />
       <div class="contact">
-        <h4>Contact</h4>
         <address>
-          123 Way 456 Street Somewhere, USA 1 (888) 888-8888 sales@greatidea.io
-          Copyright Great Idea! 2018
+          <h4>Contact</h4>
+          <ul>
+            <li>123 Way 456 Street Somewhere, <br />USA 1 (888) 888-8888</li>
+            <li>sales@greatidea.io</li>
+          </ul>
         </address>
       </div>
+      <div class="copyright">Copyright Great Idea! 2018</div>
     </div>
   </body>
 </html>
