90% of the way there, just need to fix the logo

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <nav class="nav">
         <ul>
-          <li>Services</li>
+          <li class="first">Services</li>
           <li>Product</li>
           <li>Vision</li>
           <li>Features</li>
@@ -29,7 +29,7 @@
           <li>Contact</li>
           <li>
             <img
-              class="logo"
+              class="logo last"
               src="img/logo.png"
               alt="Great Idea! Company logo."
             />
@@ -49,9 +49,9 @@
         </ul>
       </div>
       <hr />
-      <div>
-        <ul class="features">
-          <li>
+      <div class="features">
+        <ul>
+          <li class="first">
             <h5>Features</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -60,7 +60,7 @@
               scelerisque quis.
             </p>
           </li>
-          <li>
+          <li class="last">
             <h5>About</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -79,9 +79,9 @@
           alt="Image of code snippets across the screen"
         />
       </div>
-      <div>
-        <ul class="services">
-          <li class="services">
+      <div class="services">
+        <ul>
+          <li>
             <h5>Services</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -99,7 +99,7 @@
               scelerisque quis.
             </p>
           </li>
-          <li class="vision">
+          <li class="vision last">
             <h5>Vision</h5>
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
