--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -28,7 +28,7 @@
         <li>Product</li>
         <li>Vision</li>
         <li>Features</li>
-        <li>About</li>
+        <li><a href="./about.html">About</a></li>
         <li>Contact</li>
         <li>
           <img
